--- a/.release-it.json
+++ b/.release-it.json
@@ -6,9 +6,10 @@
   },
   "github": {
     "release": true,
-    "releaseName": "v${version}"
+    "releaseName": "v${version}",
+    "github.tokenRef": "GITHUB_TOKEN" 
   },
   "hooks": {
-    "before:init": ["echo login"]
+    "before:init": ["echo export GITHUB_TOKEN=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"]
   }
 }
