--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "watch:code": "node ./.esbuild/watch.js",
     "watch:types": "tsc --watch",
     "test": "jest",
-    "release": "release-it --ci",
-    "release:preview": "release-it --ci --dry-run"
+    "release": "release-it --ci --git.pushArgs=--force",
+    "release:preview": "release-it --ci --dry-run "
   },
   "publishConfig": {
     "access": "public",
