--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/SuperViz/sdk#readme",
   "devDependencies": {
+    "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
