--- a/.release-it.json
+++ b/.release-it.json
@@ -14,6 +14,6 @@
     "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
   },
   "npm": {
-    "publish": true
+    "publish": false
   }
 }
