feat: add RealtimeService on sdk, including sync users and colors

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "yargs": "^17.5.1"
   },
   "dependencies": {
-    "@superviz/immersive-core": "^0.3.1"
+    "@superviz/immersive-core": "^0.3.1",
+    "lodash.debounce": "^4.0.8"
   }
 }
