--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "ES2020",
     "outDir": "./dist",
     "emitDeclarationOnly": true,
     "preserveWatchOutput": true,
     "declaration": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
+    "resolveJsonModule": true
   },
   "include": [
     "./src"
