--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "dependencies": {
     "@superviz/immersive-core": "^0.3.1",
-    "lodash.debounce": "^4.0.8"
+    "@types/lodash.isequal": "^4.5.6",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0"
   }
 }
