--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "ES2020",
     "outDir": "./dist",
+    "preserveWatchOutput": true,
     "emitDeclarationOnly": true,
     "declaration": true,
     "esModuleInterop": true,
