--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
     "yargs": "^17.5.1"
   },
   "dependencies": {
-    "@types/jest": "^28.1.3",
-    "@types/node": "^18.7.15",
-    "@types/lodash.isequal": "^4.5.6",
     "@superviz/immersive-core": "^0.3.1",
+    "@types/jest": "^28.1.3",
+    "@types/lodash.isequal": "^4.5.6",
+    "@types/node": "^18.7.15",
+    "ably": "^1.2.29",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0"
   }
