fix: enable parallelism
Signed-off-by: Jaison Peres <jaisoncperes@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 SDK_BASE_API_URL=
 SDK_VIDEO_CONFERENCE_LAYER_URL=
+
+E2E_BASE_URL=
+E2E_CI=
+E2E_LOCALE=en
+E2E_ROOM_ID=
+E2E_USER_NAME=
+E2E_USER_ID=
