--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,13 @@ jobs:
           DEPLOY_ENV_FILE: ${{ secrets.DEPLOY_ENV_FILE }}
         run: |
           echo $DEPLOY_ENV_FILE | base64 --decode > ./.env
+      - name: Build and run e2e tests
+        env:
+          E2E_BASE_URL: ${{ secrets.E2E_BASE_URL }}
+          E2E_ROOM_ID: ${{ secrets.E2E_ROOM_ID }}
+          E2E_USER_NAME: ${{ secrets.E2E_USER_NAME }}
+          E2E_USER_ID: ${{ secrets.E2E_USER_ID }}
+        run: source ./e2e/build-e2e.sh
       - name: Install dependencies
         run: yarn install
         env:
