--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch:types": "tsc --watch",
     "test": "jest",
     "release": "release-it --ci",
-    "release-dev": "release-it --preRelease=rc --ci",
+    "release:dev": "release-it --preRelease=rc --ci",
     "release:preview": "release-it --ci --dry-run",
     "test:e2e": "playwright test ./e2e",
     "test:e2e:pt-br": "E2E_LOCALE=pt-BR yarn test:e2e",
