--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superviz/sdk",
-  "version": "0.0.49",
+  "version": "0.0.50-rc.0",
   "description": "SuperViz SDK",
   "main": "dist/index.js",
   "scripts": {
