--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "debug": "^4.3.4",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "lodash.isequal": "^4.5.0"
+    "lodash.isequal": "^4.5.0",
+    "nosleep.js": "^0.12.0"
   }
 }
