--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superviz/sdk",
-  "version": "1.0.1-rc.26",
+  "version": "2.0.0",
   "description": "SuperViz SDK",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "watch:types": "tsc --watch",
     "test": "jest",
     "release": "release-it --ci",
-    "release:dev": "release-it --preRelease=rc --ci",
+    "release:dev": "release-it preminor--preRelease=beta --ci",
+    "release:minor": "release-it preminor --ci",
     "release:major": "release-it major --ci",
     "release:preview": "release-it --ci --dry-run",
     "test:e2e": "playwright test ./e2e",
