--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "release": "release-it --ci",
     "release:dev": "release-it preminor --preRelease=beta --ci",
-    "release:minor": "release-it preminor --ci",
+    "release:minor": "release-it minor --ci",
     "release:major": "release-it major --ci",
     "release:preview": "release-it --ci --dry-run",
     "test:e2e": "playwright test ./e2e",
