--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superviz/sdk",
-  "version": "2.11.0-rc.25",
+  "version": "2.12.0",
   "description": "SuperViz SDK",
   "main": "dist/index.js",
   "scripts": {
