--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superviz/sdk",
-  "version": "2.17.1-rc.2",
+  "version": "0.0.0-development",
   "description": "SuperViz SDK",
   "main": "dist/index.js",
   "scripts": {
@@ -23,7 +23,9 @@
     "test:e2e:install": "PLAYWRIGHT_BROWSERS_PATH=$HOME/pw-browsers npx playwright install",
     "test:e2e:generate": "eval $(cat .env | xargs) && npx playwright codegen $E2E_BASE_URL",
     "test:e2e:debug": "eval $(cat .env | xargs) && PWDEBUG=1 yarn test:e2e",
-    "test:e2e:headed": "eval $(cat .env | xargs) && yarn test:e2e --headed"
+    "test:e2e:headed": "eval $(cat .env | xargs) && yarn test:e2e --headed",
+    "semantic-release": "semantic-release",
+    "commit": "git-cz"
   },
   "publishConfig": {
     "access": "public",
@@ -31,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SuperViz/sdk.git"
+    "url": "https://github.com/SuperViz/sdk.git"
   },
   "author": "",
   "license": "ISC",
@@ -45,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "concurrently": "^7.2.2",
+    "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.1",
     "esbuild": "^0.14.48",
     "eslint": "^7.32.0 || ^8.2.0",
@@ -52,7 +55,7 @@
     "eslint-plugin-import": "^2.25.2",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
-    "release-it": "^14.14.3",
+    "semantic-release": "19.0.5",
     "ts-jest": "^28.0.5",
     "tsc": "^2.0.4",
     "typescript": "^4.7.4",
@@ -71,5 +74,10 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "nosleep.js": "^0.12.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
