fix: set beta as dev branch and turn back e2e tests in beta versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-      - dev
       - beta
 jobs:
   development:
@@ -19,13 +18,13 @@ jobs:
           DEPLOY_ENV_FILE: ${{ secrets.DEPLOY_DEV_ENV_FILE }}
         run: |
           echo $DEPLOY_ENV_FILE | base64 --decode > ./.env
-#      - name: Build and run e2e tests
-#        env:
-#          E2E_BASE_URL: ${{ secrets.E2E_BASE_URL }}
-#          E2E_ROOM_ID: ${{ secrets.E2E_ROOM_ID }}
-#          E2E_USER_NAME: ${{ secrets.E2E_USER_NAME }}
-#          E2E_USER_ID: ${{ secrets.E2E_USER_ID }}
-#        run: source ./e2e/build-e2e.sh
+      - name: Build and run e2e tests
+        env:
+          E2E_BASE_URL: ${{ secrets.E2E_BASE_URL }}
+          E2E_ROOM_ID: ${{ secrets.E2E_ROOM_ID }}
+          E2E_USER_NAME: ${{ secrets.E2E_USER_NAME }}
+          E2E_USER_ID: ${{ secrets.E2E_USER_ID }}
+        run: source ./e2e/build-e2e.sh
       - name: Install dependencies
         run: yarn install
         env:
@@ -71,17 +70,31 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: git config --global user.name SuperViz
       - run: git config --global user.email ci@superviz.com
-      - run: yarn release:minor
+      - run: yarn build
         env:
           NPM_CONFIG_USERCONFIG: .npmrc.ci
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish npm package
+        run: npm whoami && npm run semantic-release
         env:
           NPM_CONFIG_USERCONFIG: .npmrc.ci
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm whoami && npm publish
-  slackNotification:
+  slackNotificationDev:
+    needs: development
+    name: Slack Notification
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_ICON: https://avatars.slack-edge.com/2020-11-18/1496892993975_af721d1c045bea2d5a46_48.png
+          MSG_MINIMAL: true
+          SLACK_USERNAME: Deploy BETA SDK
+  slackNotificationProd:
     needs: main
     name: Slack Notification
     runs-on: ubuntu-latest
