feat: added remote-config-service for get config from server

--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,6 @@ web_modules/
 .env.local
 
 # parcel-bundler cache (https://parceljs.org/)
-.cache
 .parcel-cache
 
 # Next.js build output
@@ -133,3 +132,4 @@ dist
 dist/
 coverage/
 .DS_Store
+.version.js
