--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,9 @@
 {
-  "branches": ["main", "beta"]
+  "branches": ["main", "beta"],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "semantic-release-version-file",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm"
+  ]
 }
