--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,30 +13,30 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      - name: create environment files
-        env:
-          DEPLOY_ENV_FILE: ${{ secrets.DEPLOY_DEV_ENV_FILE }}
-        run: |
-          echo $DEPLOY_ENV_FILE | base64 --decode > ./.env
-      - name: Build and run e2e tests
-        env:
-          E2E_BASE_URL: ${{ secrets.E2E_BASE_URL }}
-          E2E_ROOM_ID: ${{ secrets.E2E_ROOM_ID }}
-          E2E_USER_NAME: ${{ secrets.E2E_USER_NAME }}
-          E2E_USER_ID: ${{ secrets.E2E_USER_ID }}
-        run: source ./e2e/build-e2e.sh
-      - name: Install dependencies
-        run: yarn install
-        env:
-          NPM_CONFIG_USERCONFIG: .npmrc.ci
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: git config --global user.name SuperViz
-      - run: git config --global user.email ci@superviz.com
-      - run: yarn build
-        env:
-          NPM_CONFIG_USERCONFIG: .npmrc.ci
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+#      - name: create environment files
+#        env:
+#          DEPLOY_ENV_FILE: ${{ secrets.DEPLOY_DEV_ENV_FILE }}
+#        run: |
+#          echo $DEPLOY_ENV_FILE | base64 --decode > ./.env
+#      - name: Build and run e2e tests
+#        env:
+#          E2E_BASE_URL: ${{ secrets.E2E_BASE_URL }}
+#          E2E_ROOM_ID: ${{ secrets.E2E_ROOM_ID }}
+#          E2E_USER_NAME: ${{ secrets.E2E_USER_NAME }}
+#          E2E_USER_ID: ${{ secrets.E2E_USER_ID }}
+#        run: source ./e2e/build-e2e.sh
+#      - name: Install dependencies
+#        run: yarn install
+#        env:
+#          NPM_CONFIG_USERCONFIG: .npmrc.ci
+#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+#      - run: git config --global user.name SuperViz
+#      - run: git config --global user.email ci@superviz.com
+#      - run: yarn build
+#        env:
+#          NPM_CONFIG_USERCONFIG: .npmrc.ci
+#          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish npm package
         run: npm whoami && npm run semantic-release
         env:
