ci: remove beta package

--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "branches": ["main", "beta"],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "semantic-release-version-file",
