--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@superviz/sdk",
   "version": "0.0.0-development",
   "description": "SuperViz SDK",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": ["src", "dist"],
   "scripts": {
     "prepare": "husky install",
     "build": "node ./.esbuild/build.js",
