--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@jest/globals": "^29.5.0",
     "@playwright/test": "^1.28.1",
+    "@types/debug": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "concurrently": "^7.2.2",
@@ -66,7 +67,6 @@
     "yargs": "^17.5.1"
   },
   "dependencies": {
-    "@superviz/immersive-core": "^0.3.1",
     "@types/jest": "^28.1.3",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^18.7.15",
