ci: configure pull requests checks (build and tests)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "watch": "concurrently -n code,types \"yarn watch:code\" \"yarn watch:types\"",
     "watch:code": "node ./.esbuild/watch.js",
     "watch:types": "tsc --watch",
-    "test": "jest",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
+    "test:unit:coverage": "jest --coverage",
+    "test:unit:ci": "jest --ci",
     "test:e2e": "PLAYWRIGHT_BROWSERS_PATH=$HOME/pw-browsers npx playwright test ./e2e",
     "test:e2e:pt-br": "E2E_LOCALE=pt-BR yarn test:e2e",
     "test:e2e:en": "E2E_LOCALE=en yarn test:e2e",
