--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "bowser": "^2.11.0",
     "bowser-jr": "^1.0.4",
     "debug": "^4.3.4",
+    "lit": "^2.7.6",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
