chore(config): test runner to web-components

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:unit:ci": "jest --ci",
+    "test:unit:web-components": "wtr",
+    "test:unit:web-components:watch": "wtr --watch",
+    "test:unit:web-components:coverage": "wtr --coverage",
     "semantic-release": "semantic-release",
     "commit": "git-cz"
   },
@@ -39,10 +42,16 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@esm-bundle/chai": "^4.3.4-fix.0",
     "@jest/globals": "^29.5.0",
+    "@open-wc/testing-helpers": "^2.3.0",
     "@types/debug": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "@web/dev-server-esbuild": "^0.4.1",
+    "@web/dev-server-legacy": "^2.0.1",
+    "@web/test-runner": "^0.17.0",
+    "@web/test-runner-playwright": "^0.10.1",
     "concurrently": "^7.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.1",
@@ -52,6 +61,7 @@
     "eslint-plugin-import": "^2.25.2",
     "husky": "^8.0.3",
     "jest": "^28.1.2",
+    "jest-browser-globals": "^25.1.0-beta",
     "jest-environment-jsdom": "^28.1.2",
     "jest-fetch-mock": "^3.0.3",
     "semantic-release": "19.0.5",
