--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "experimentalDecorators": true,
+    "skipLibCheck": true
   },
   "include": [
     "./src"
