--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "@jest/globals": "^29.5.0",
     "@open-wc/testing-helpers": "^2.3.0",
     "@types/debug": "^4.1.8",
+    "@types/jest": "^28.1.3",
+    "@types/lodash.isequal": "^4.5.6",
+    "@types/node": "^18.7.15",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@web/dev-server-esbuild": "^0.4.1",
@@ -58,6 +61,7 @@
     "esbuild": "^0.14.48",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "esbuild-sass-plugin": "^2.12.0",
     "eslint-plugin-import": "^2.25.2",
     "husky": "^8.0.3",
     "jest": "^28.1.2",
@@ -71,9 +75,7 @@
     "yargs": "^17.5.1"
   },
   "dependencies": {
-    "@types/jest": "^28.1.3",
-    "@types/lodash.isequal": "^4.5.6",
-    "@types/node": "^18.7.15",
+    "@superviz/sv-icons": "^0.8.6",
     "ably": "^1.2.29",
     "bowser": "^2.11.0",
     "bowser-jr": "^1.0.4",
