--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@jest/globals": "^29.5.0",
     "@open-wc/testing-helpers": "^2.3.0",
     "@types/debug": "^4.1.8",
+    "@types/luxon": "^3.3.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@web/dev-server-esbuild": "^0.4.1",
@@ -82,6 +83,7 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
+    "luxon": "^3.4.0",
     "semantic-release-version-file": "^1.0.2"
   },
   "config": {
