--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,10 +23,8 @@ jobs:
       - name: Code Coverage Report
         uses: romeovs/lcov-reporter-action@v0.2.11
         with:
-          title: Code Coverage Report - ${{ github.event.pull_request.head.ref }}
           github-token: ${{ secrets.TOKEN_GITHUB }}
           lcov-file: ./coverage/lcov.info
-          delete-old-comments: true
   test-web-components:
     runs-on: ubuntu-latest
     steps:
@@ -40,7 +38,12 @@ jobs:
         run: |
           touch .version.js && echo "echo \"export const version = 'test'\" > .version.js" | bash -
       - name: Run tests
-        run: yarn test:unit:web-components
+        run: yarn test:unit:web-components:coverage
+      - name: Code Coverage Report
+        uses: romeovs/lcov-reporter-action@v0.2.11
+        with:
+          github-token: ${{ secrets.TOKEN_GITHUB }}
+          lcov-file: ./coverage-components/lcov.info
   build:
     runs-on: ubuntu-latest
     needs: [test-unit, test-web-components]
