--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - beta
 jobs:
   development:
-    if: "github.ref == 'refs/heads/beta'"
+    if: github.ref == 'refs/heads/beta'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -28,20 +28,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MESSAGE: 'BUILD: ({sha}) {msg}'
   main:
-    if: "github.ref == 'refs/heads/main'"
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      #      - name: Build and run e2e tests
-      #        env:
-      #          E2E_BASE_URL: ${{ secrets.E2E_BASE_URL }}
-      #          E2E_ROOM_ID: ${{ secrets.E2E_ROOM_ID }}
-      #          E2E_USER_NAME: ${{ secrets.E2E_USER_NAME }}
-      #          E2E_USER_ID: ${{ secrets.E2E_USER_ID }}
-      #        run: source ./e2e/build-e2e.sh
       - name: Install dependencies
         run: yarn install
         env:
