fix: do not ignore build folder

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@superviz/sdk",
   "version": "0.0.0-development",
   "description": "SuperViz SDK",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "files": ["lib"],
   "scripts": {
     "prepare": "husky install",
     "build": "node ./.esbuild/build.js",
