--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "@superviz/sdk",
   "version": "0.0.0-development",
   "description": "SuperViz SDK",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "src",
-    "dist"
-  ],
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "files": ["lib"],
   "scripts": {
     "prepare": "husky install",
     "build": "node ./.esbuild/build.js",
@@ -67,6 +64,7 @@
     "jest-browser-globals": "^25.1.0-beta",
     "jest-environment-jsdom": "^28.1.2",
     "jest-fetch-mock": "^3.0.3",
+    "rimraf": "^5.0.1",
     "semantic-release": "19.0.5",
     "ts-jest": "^28.0.5",
     "tsc": "^2.0.4",
