--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ES2020",
-    "outDir": "./dist",
+    "outDir": "./lib",
     "lib": ["ES2020", "DOM"],
     "preserveWatchOutput": true,
     "emitDeclarationOnly": true,
