--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postbuild": "tsc --emitDeclarationOnly --declaration",
     "watch": "concurrently -n code,types \"yarn watch:code\" \"yarn watch:types\"",
     "watch:code": "node ./.esbuild/watch.js",
-    "watch:types": "tsc --watch",
+    "watch:types": "tsc --watch --outDir dist",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
