--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - lab
 jobs:
   development:
-    if: "github.ref == 'refs/heads/beta'"
+    if: github.ref == 'refs/heads/beta'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,11 +25,11 @@ jobs:
         env:
           REPO: self
           BRANCH: beta-release
-          FOLDER: dist
+          FOLDER: lib
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MESSAGE: 'BUILD: ({sha}) {msg}'
   lab:
-    if: "github.ref == 'refs/heads/lab'"
+    if: github.ref == 'refs/heads/lab'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -47,24 +47,17 @@ jobs:
         env:
           REPO: self
           BRANCH: lab-release
-          FOLDER: dist
+          FOLDER: lib
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MESSAGE: 'BUILD: ({sha}) {msg}'
   main:
-    if: "github.ref == 'refs/heads/main'"
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      #      - name: Build and run e2e tests
-      #        env:
-      #          E2E_BASE_URL: ${{ secrets.E2E_BASE_URL }}
-      #          E2E_ROOM_ID: ${{ secrets.E2E_ROOM_ID }}
-      #          E2E_USER_NAME: ${{ secrets.E2E_USER_NAME }}
-      #          E2E_USER_ID: ${{ secrets.E2E_USER_ID }}
-      #        run: source ./e2e/build-e2e.sh
       - name: Install dependencies
         run: yarn install
         env:
