chore(config): remove remote config file

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Create a .version.js file
         run: |
           touch .version.js && echo "echo \"export const version = 'test'\" > .version.js" | bash -
+      - name: Create a .remote-config.js file
+        run: |
+           touch .remote-config.js && echo "echo \"export default { apiUrl: 'https://localhost:3000', conferenceLayerUrl: 'https://localhost:8080' }\" > .remote-config.js" | bash -
       - name: Run tests
         run: yarn test:unit:ci --coverage
       - name: Code Coverage Report
@@ -57,5 +60,8 @@ jobs:
       - name: Create a .version.js file
         run: |
           touch .version.js && echo "echo \"export const version = 'test'\" > .version.js" | bash -
+      - name: Create a .remote-config.js file
+        run: |
+          touch .remote-config.js && echo "echo \"export default { apiUrl: 'https://localhost:3000', conferenceLayerUrl: 'https://localhost:8080' }\" > .remote-config.js" | bash -
       - name: Build
         run: yarn build
