--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "esbuild": "^0.14.48",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
