--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,9 @@
 {
-  "branches": ["main"],
+  "branches": [
+    "main", 
+    { "name": "beta", "channel": "beta", "prerelease": true },
+    { "name": "lab", "channel": "lab", "prerelease": true }
+  ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "semantic-release-version-file",
