--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "luxon": "^3.4.3",
+    "rxjs": "^7.8.1",
     "semantic-release-version-file": "^1.0.2"
   },
   "config": {
