fix: build types and add suport to ESM entrypoint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+    "rootDir": "./src",
     "target": "ES2020",
     "module": "ES2020",
-    "outFile": "./lib/index.d.ts",
+    "outDir": "./lib",
     "lib": ["ES2020", "DOM"],
     "preserveWatchOutput": true,
     "emitDeclarationOnly": true,
