--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDirs": ["./src", "."],
     "target": "ES2020",
     "module": "ES2020",
     "outDir": "./lib",
@@ -15,7 +15,7 @@
     "allowJs": true,
   },
   "include": [
-    "./src/**/*.ts"
+    "./src"
   ],
   "exclude": [
     "./src/**/*.test.ts",
